--- a/c_a_c_website2017/public_html/index.html
+++ b/c_a_c_website2017/public_html/index.html
@@ -34,26 +34,26 @@ and open the template in the editor.
         <div class="miniHeader">
             <div class="miniHeader__cacLogo" style="cursor: pointer;" onclick="location.href = './index.html';"></div>
             <div style="text-align: right; margin-right: 30px" >
-                <a class="miniHeader__Link" onclick="location.href = './index.html';" data-hover="aaa">ホーム</a>
-                <a class="miniHeader__Link" onclick="location.href = './html/about.html';">弊団体について</a>
-                <a class="miniHeader__Link" onclick="location.href = './html/project.html';">プロジェクト</a>
-                <a class="miniHeader__Link" onclick="location.href = './html/announce.html';">告知</a>
-                <a class="miniHeader__Link" onclick="location.href = './html/diary.html';">ダイアリー</a>
-                <a class="miniHeader__Link" onclick="location.href = './html/media.html';">メディア</a>
-                <a class="miniHeader__Link" onclick="location.href = './html/link.html';">リンク</a>
+                <a href="./index.html" class="miniHeader__Link">ホーム</a>
+                <a href="./html/about.html" class="miniHeader__Link">弊団体について</a>
+                <a href="./html/project.html" class="miniHeader__Link">プロジェクト</a>
+                <a href="./html/announce.html" class="miniHeader__Link">告知</a>
+                <a href="./html/diary.html" class="miniHeader__Link">ダイアリー</a>
+                <a href="./html/media.html" class="miniHeader__Link">メディア</a>
+                <a href="./html/alinkbout.html" class="miniHeader__Link">リンク</a>
             </div>
         </div>
         <div class="header">
             <div class="header__cacDiscription">京都産業大学　文化団体連盟　電子計算機応用部</div>
             <div class="header__cacLogo"></div>
             <div style="width: 100%; text-align: center;" >
-                <a class="header__Link" onclick="location.href = './index.html';" data-hover="aaa">ホーム</a>
-                <a class="header__Link" onclick="location.href = './html/about.html';">弊団体について</a>
-                <a class="header__Link" onclick="location.href = './html/project.html';">プロジェクト</a>
-                <a class="header__Link" onclick="location.href = './html/announce.html';">告知</a>
-                <a class="header__Link" onclick="location.href = './html/diary.html';">ダイアリー</a>
-                <a class="header__Link" onclick="location.href = './html/media.html';">メディア</a>
-                <a class="header__Link" onclick="location.href = './html/link.html';">リンク</a>
+                <a href="./index.html" class="header__Link">ホーム</a>
+                <a href="./html/about.html" class="header__Link">弊団体について</a>
+                <a href="./html/project.html" class="header__Link">プロジェクト</a>
+                <a href="./html/announce.html" class="header__Link">告知</a>
+                <a href="./html/diary.html" class="header__Link">ダイアリー</a>
+                <a href="./html/media.html" class="header__Link">メディア</a>
+                <a href="./html/link.html" class="header__Link">リンク</a>
             </div>
         </div>
         
