--- a/c_a_c_website2017/public_html/html/link.html
+++ b/c_a_c_website2017/public_html/html/link.html
@@ -25,19 +25,20 @@ and open the template in the editor.
         <link href="https://fonts.googleapis.com/earlyaccess/roundedmplus1c.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet" />
     </head>
     <body>
         <!-- start header -->
         <div class="miniHeader">
             <div class="miniHeader__cacLogo" style="cursor: pointer;" onclick="location.href = '../index.html';"></div>
             <div style="text-align: right; margin-right: 30px" >
-                <a class="miniHeader__Link" onclick="location.href = '../index.html';" data-hover="aaa">ホーム</a>
-                <a class="miniHeader__Link" onclick="location.href = './about.html';">弊団体について</a>
-                <a class="miniHeader__Link" onclick="location.href = './project.html';">プロジェクト</a>
-                <a class="miniHeader__Link" onclick="location.href = './announce.html';">告知</a>
-                <a class="miniHeader__Link" onclick="location.href = './diary.html';">ダイアリー</a>
-                <a class="miniHeader__Link" onclick="location.href = './media.html';">メディア</a>
-                <a class="miniHeader__Link" onclick="location.href = './link.html';">リンク</a>
+                <a href="../index.html" class="miniHeader__Link">ホーム</a>
+                <a href="./about.html" class="miniHeader__Link">弊団体について</a>
+                <a href="./project.html" class="miniHeader__Link">プロジェクト</a>
+                <a href="./announce.html" class="miniHeader__Link">告知</a>
+                <a href="./diary.html" class="miniHeader__Link">ダイアリー</a>
+                <a href="./media.html" class="miniHeader__Link">メディア</a>
+                <a href="./alinkbout.html" class="miniHeader__Link">リンク</a>
             </div>
         </div>
     </body>
