fixed incorrect link

--- a/c_a_c_website2017/public_html/html/project.html
+++ b/c_a_c_website2017/public_html/html/project.html
@@ -39,7 +39,7 @@ and open the template in the editor.
                 <a href="./announce.html" class="miniHeader__Link">告知</a>
                 <a href="./diary.html" class="miniHeader__Link">ダイアリー</a>
                 <a href="./media.html" class="miniHeader__Link">メディア</a>
-                <a href="./alinkbout.html" class="miniHeader__Link">リンク</a>
+                <a href="./link.html" class="miniHeader__Link">リンク</a>
             </div>
         </div>
         
