--- a/c_a_c_website2017/public_html/index.html
+++ b/c_a_c_website2017/public_html/index.html
@@ -40,7 +40,7 @@ and open the template in the editor.
                 <a href="./html/announce.html" class="miniHeader__Link">告知</a>
                 <a href="./html/diary.html" class="miniHeader__Link">ダイアリー</a>
                 <a href="./html/media.html" class="miniHeader__Link">メディア</a>
-                <a href="./html/alinkbout.html" class="miniHeader__Link">リンク</a>
+                <a href="./html/link.html" class="miniHeader__Link">リンク</a>
             </div>
         </div>
         <div class="header">
