creating project page

--- a/c_a_c_website2017/public_html/html/about.html
+++ b/c_a_c_website2017/public_html/html/about.html
@@ -112,7 +112,7 @@ and open the template in the editor.
                             ミュージック制作<br>
                             <p style="margin-left: 10px">
                                 ・楽曲<br>
-                                ・効果音
+                                ・効果音 etc.
                             </p>
                         </div>
                         <div class="aboutProfile__information--separator"></div>
