50% done creating eachDiary page

--- a/c_a_c_website2017/public_html/html/project.html
+++ b/c_a_c_website2017/public_html/html/project.html
@@ -217,9 +217,9 @@ and open the template in the editor.
                 
                 <div class="projectContents__pageMenu--frame">
                     <div class="projectContents__pageMenu--back">
-                        <a class="projectContents__pageMenu--cellRecNotButton">1/20</a>
+                        <a class="projectContents__pageMenu--cellRecNotButton">1/1</a>
                         <a href="" class="projectContents__pageMenu--cellRec">&lt;&lt;First</a>
-                        <a href="" class="projectContents__pageMenu--cellSquare">1</a>
+                        <a href="" class="projectContents__pageMenu--cellSquare" style="background-color: #dddddd">1</a>
                         <a href="" class="projectContents__pageMenu--cellRec">Last&gt;&gt;</a>
                     </div>
                 </div>
