Diaryページ完了

--- a/c_a_c_website2017/public_html/index.html
+++ b/c_a_c_website2017/public_html/index.html
@@ -14,7 +14,7 @@ and open the template in the editor.
     <!-- links for css-->
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link href="css/header.css" rel="stylesheet" type="text/css" />
-    <link href="css/futter.css" rel="stylesheet" type="text/css" />
+    <link href="css/footer.css" rel="stylesheet" type="text/css" />
 
     <!-- links for javascript -->
     <script src="javascript/main.js" type="text/javascript"></script>
@@ -164,15 +164,15 @@ and open the template in the editor.
 
     <!-- start futter -->
 
-    <div class="futter">
-        <div class="futter__contents">
-            <a href="./index.html" class="futter__contents--link">ホーム</a>
-            <a href="./html/about.html" class="futter__contents--link">弊団体について</a>
-            <a href="./html/project.html" class="futter__contents--link">プロジェクト</a>
-            <a href="./html/announce.html" class="futter__contents--link">告知</a>
-            <a href="./html/diary.html" class="futter__contents--link">ダイアリー</a>
-            <a href="./html/media.html" class="futter__contents--link">メディア</a>
-            <div class="futter__copyright">
+    <div class="footer">
+        <div class="footer__contents">
+            <a href="./index.html" class="footer__contents--link">ホーム</a>
+            <a href="./html/about.html" class="footer__contents--link">弊団体について</a>
+            <a href="./html/project.html" class="footer__contents--link">プロジェクト</a>
+            <a href="./html/announce.html" class="footer__contents--link">告知</a>
+            <a href="./html/diary.html" class="footer__contents--link">ダイアリー</a>
+            <a href="./html/media.html" class="footer__contents--link">メディア</a>
+            <div class="footer__copyright">
                 Copyright &copy; Computer Applications Club All Rights Reserved.
             </div>
         </div>
